--- a/judger-frontend/app/globals.css
+++ b/judger-frontend/app/globals.css
@@ -392,7 +392,7 @@
 
 .ck p {
   margin-bottom: 16px !important;
-  color: #4e5968;
+  color: #333d4b;
 }
 
 .ck figcaption {
@@ -463,7 +463,7 @@
 }
 
 .markdown-preview p {
-  color: #4e5968;
+  color: #333d4b;
   margin-bottom: 16px;
 }
 
