fix: css 파일 내 className 오탈자 정정

--- a/judger-frontend/app/globals.css
+++ b/judger-frontend/app/globals.css
@@ -454,7 +454,8 @@
 .markdown-preview tr:nth-child(even) {
   background-color: #f7f9fc !important;
 }
-ㅑ .markdown-preview td {
+
+.markdown-preview td {
   border-color: #d4d6da !important;
 }
 
